--- a/Documentation/Calculating-Text-Distances.Rmd
+++ b/Documentation/Calculating-Text-Distances.Rmd
@@ -17,6 +17,8 @@ library("stringr")
 library("readtext")
 library("reshape2")
 library("magrittr")
+library("ggplot2")
+library("gridExtra")
 ```
 
 ```{r}
@@ -26,6 +28,7 @@ tickers <- readLines("tickers.txt") # use unique(masterIndex) if we wish to scal
 StopWordsList <- readLines("StopWordsList.txt")
 hpr <- read.csv("annualReturns.csv", na.strings = "NA")
 sections <- c("1", "1A", "3", "4", "7", "8", "9", "9A")
+section_names <- c("Business", "Risk Factors", "Legal Proceedings", "Mine Safety Disclosures", "MDA of Financial Conditions", "Financial Statements and Supplementary Data", "Changes on Accounting and Financial Disclosure", "Controls and Procedures")
 ```
 
 The new section extractor algorithm is much more flexible and robust than the old algorithm. Before, we had an issue where we frequently got the table of contents of a financial statement masquerading as an extra 20 sections. Other, much more rare situations include problematic formatting by the financial statements which would tag normal words as section headings. This problem is solved by choosing the hit with the maximum word count and making it the target section. There are only a few niche cases were a mistagged string is longer than the actual section, and almost no situations where the table of contents is longer than the section itself.
@@ -83,6 +86,15 @@ dist_parser <- function(distObj){
 filing_similarity <- function(dfm_list, method){
   map(dfm_list, textstat_simil, method=method) %>%
   map(dist_parser)}
+
+index_filing_filterer <- function(ticker, index){
+  filter(index, TICKER == ticker) %>%
+    pull(filing) # pull the file name, which in this case is just the filing number
+}
+index_year_filterer <- function(ticker, index){
+  filter(index, TICKER == ticker) %>%
+    pull(YEAR)
+}
 ```
 
 Do 1 ticker end to end.
@@ -156,13 +168,9 @@ file_years <- index_year_filterer(the_ticker, masterIndex)
 
 if (length(file_names) <= 1 | length(file_years) <= 1){
   empty_list <- map(rep(NA, times = length(sections)), ~data_frame(previous_filing = ., current_filing = ., distance = ., returns = .))
-  print(paste("Only one year of data for ticker", the_ticker))
+  print(paste("Only one filing available for ticker", the_ticker))
   return(empty_list)
 } # companies with only one year of data cannot be used for a distance analysis. We return a data frame of NAs so that the rbind() can be smooth
-
-file_locations <- paste0(file_path, file_names, file_type)
-
-filings_list <- map(file_locations, readtext)
 
 years <- paste0("X", file_years[-1]) # chop out the first year
 returns_df <- filter(hpr, ticker == the_ticker) %>% # calling the_ticker ticker gives rise to namespace issues
@@ -173,6 +181,10 @@ if (is_empty(returns_df) == TRUE){
   print(paste("No financial data for ticker", the_ticker))
   return(empty_list)
 }
+
+file_locations <- paste0(file_path, file_names, file_type)
+
+filings_list <- map(file_locations, readtext)
 
 colnames(returns_df) <- "returns"
 returns_df %<>% cbind(previous_filing = file_names[-length(file_names)], current_filing = file_names[-1], .) %>% # assumes no broken years in the data; broken years can occur if there is no financial filing located one year, or financial data no existerino for a year. Obviously this occurring would be very nonstandard
@@ -187,6 +199,22 @@ print(paste("Successfully mapped distance scores to financial returns for ticker
 return(distance_returns_df)
 }
 
+plotter <- function(dfObj, section, nquantiles = 5){
+  dfObj %>%
+    na.omit %>%
+    mutate(quantile = ntile(distance, n = nquantiles)) %>%
+    group_by(quantile) %>%
+    summarise(average_return = mean(as.numeric(returns))) %>%
+    ggplot(aes(x = quantile, y = average_return)) +
+    geom_bar(stat = "identity") +
+    theme(axis.title.y=element_blank()) +
+    xlab(section)
+}
+
 distance_returns_df <- map(tickers, distance_returns_calculator) %>%
   pmap(rbind) # pmap takes the list of lists and rbinds each of the elements within the nested list together. its black magic
+  
+distance_returns_plot <- distance_returns_df %>%
+  map2(section_names, ~plotter(dfObj = .x, section = .y)) %>%
+  arrangeGrob(grobs = ., ncol = 2)
 ```
