--- a/Documentation/documentation.Rmd
+++ b/Documentation/documentation.Rmd
@@ -62,13 +62,13 @@ paste(c(input, as.character(masterIndex$EDGAR_LINK[x])), collapse = "")) %>%
 
 This pastes together the input directory with the edgar link, allowing the parsing function to access the raw text file. If the raw text filings are stored in some other way, this paste() function should be edited so that its output results in the path to the raw text filing. For example, substituting x = 1 should give
 
-"https:www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt"
+"https://www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt"
 
 If you visit this link, you will find the exact document which will be parsed by the function. It is a mess of HTML and XBRL code.
 
 The %>% symbol is a pipe operator, which takes the output of the function to the left and "pipes" it as the first input in the function in the next line.
 
-In this case, the function to the left is paste(c(input, as.character(masterIndex$EDGAR_LINK[1])), collapse = ""). Its output is "https:www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt".
+In this case, the function to the left is paste(c(input, as.character(masterIndex$EDGAR_LINK[1])), collapse = ""). Its output is "https://www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt".
 This output is fed as the first input into the function in the line below, which is
 
 ### Step 2
@@ -77,7 +77,7 @@ This output is fed as the first input into the function in the line below, which
 readLines(encoding = "UTF-8") %>%
 ```
 
-The equivalent code is readLines("https:www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt", encoding = "UTF-8").
+The equivalent code is readLines("https://www.sec.gov/Archives/edgar/data/1000180/0001000180-13-000009.txt", encoding = "UTF-8").
 
 The readLines() function will read every line of a text document into R. Since the 10-K raw filings follow the UTF-8 format, it has been specified within the parsing algorithm to make it run slightly faster.
 
