--- a/Documentation/Text-Distance-Algo.Rmd
+++ b/Documentation/Text-Distance-Algo.Rmd
@@ -31,7 +31,9 @@ section_extractor <- function(statement, section){
   pattern <- paste0("°Item ", section, "[^\\w|\\d]", ".*?°")
   section_hits <- str_extract_all(statement, pattern, simplify=TRUE) 
   if (is_empty(section_hits) == TRUE){
-    return("empty")
+    empty_vec <- "empty"
+    names(empty_vec) <- paste(name, section, sep = "_") 
+    return(empty_vec)
   }
   word_counts <- map_int(section_hits, ntoken)
   max_hit <- which(word_counts == max(word_counts))
@@ -89,9 +91,9 @@ file_locations <- paste0(file_path, file_names, file_type)
 
 filings_list <- map(file_locations, readtext)
 
-similarity_list <- map(sections, section_dfm, statements_list=filings_list, min_words=10, tf=TRUE) %>%
-  map(textstat_simil, method="cosine") %>%
-  map2(sections, dist_parser) %>%
+similarity_list <- map(sections, section_dfm, statements_list=filings_list, min_words=10, tf=TRUE) #%>%
+  map(textstat_simil, method="cosine") #%>%
+  map2(sections, dist_parser) #%>%
   reduce(left_join, by = c("previous_filing", "filing"))
 
 prev_current_mapping <- data_frame(previous_filing = file_names[-length(file_names)], filing = file_names[-1])
