--- a/Documentation/Text-Distance-Algo.Rmd
+++ b/Documentation/Text-Distance-Algo.Rmd
@@ -28,7 +28,7 @@ sections <- c("1", "1A", "3", "4", "7", "8", "9", "9A")
 
 section_extractor <- function(statement, section){
   name <- statement$doc_id 
-  pattern <- paste0("Â°Item ", section, "[^\\w|\\d]", ".*?Â°")
+  pattern <- paste0("°Item ", section, "[^\\w|\\d]", ".*?°")
   section_hits <- str_extract_all(statement, pattern, simplify=TRUE) 
   if (is_empty(section_hits) == TRUE){
     empty_vec <- "empty"
@@ -91,9 +91,9 @@ file_locations <- paste0(file_path, file_names, file_type)
 
 filings_list <- map(file_locations, readtext)
 
-similarity_list <- map(sections, section_dfm, statements_list=filings_list, min_words=10, tf=TRUE) #%>%
-  map(textstat_simil, method="cosine") #%>%
-  map2(sections, dist_parser) #%>%
+similarity_list <- map(sections, section_dfm, statements_list=filings_list, min_words=10, tf=TRUE) %>%
+  map(textstat_simil, method="cosine") %>%
+  map2(sections, dist_parser) %>%
   reduce(left_join, by = c("previous_filing", "filing"))
 
 prev_current_mapping <- data_frame(previous_filing = file_names[-length(file_names)], filing = file_names[-1])
@@ -106,7 +106,7 @@ distance_df <- map(tickers, distance_returns_calculator) %>%
 
 masterIndex %<>% left_join(distance_df, by = "filing")
 
-write.csv(masterIndex, file = "index_distance.csv")
+write.csv(masterIndex, file = "index_distance.csv", row.names = FALSE)
 ```
 
 Summary statistics
